--- a/sections/image-gallery.html
+++ b/sections/image-gallery.html
@@ -18,7 +18,7 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.title || '<p class="mb-6 h2 font-light"><span class="font-light">Selected from Our</span> Gallery</p>' }}
+				html={{ context.title || '<p class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1 font-bold"><span class="font-light">Izdvajamo iz</span> Galerije</p>' }}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
