--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,34 +1,41 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
 	<div class="border-l-[10px] border-l-pink pl-5 max-w-[550px] h-min">
-		<p class="font-bold text-5xl"><span class="font-light">Featured</span> Services</p>
-		<p class="font-light text-sm my-1">Contrary to popular belief, Lorem Ipsum is not simply random text. If you are going to use a passage of Lorem  Ipsum, you need to be sure there.</p>
-		<a href="" class="flex gap-1 items-center">
-			Some Link 
+		<p class="font-bold text-5xl">{{ module.title }}</p>
+		<p class="font-light text-sm my-1">{{ module.description }}</p>
+		<a href="{{ module.link_field.url.href }}" class="flex gap-1 items-center">
+			{{ module.link_label }}
 			<svg width="7" height="10" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0.83905 0.818481L5.00017 4.71926L0.83905 8.62004" stroke="#373738" stroke-width="2"/>
+				<path d="M0.83905 0.818481L5.00017 4.71926L0.83905 8.62004" stroke="#373738" stroke-width="2" />
 			</svg>
 		</a>
 	</div>
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
-		<a href="" class="group">
-			<div class="w-[260px] h-[180px] bg-blue rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
-				konsultacije
+		{% for card in module.cards %}
+		<a href="{{ card.card_link.url.href }}" class="group">
+			<div
+				class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all"
+				style="background-color: {{card.card_color.color}};">
+				{{ card.card_title }}
 			</div>
 		</a>
-		<a href="" class="group">
-			<div class="w-[260px] h-[180px] bg-pink rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
+		{% endfor %}
+		<!-- <a href="" class="group">
+			<div
+				class="w-[260px] h-[180px] bg-pink rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
 				projektovanje
 			</div>
 		</a>
 		<a href="" class="group">
-			<div class="w-[260px] h-[180px] bg-blue rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
+			<div
+				class="w-[260px] h-[180px] bg-blue rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
 				izgradnja
 			</div>
 		</a>
 		<a href="" class="group">
-			<div class="w-[260px] h-[180px] bg-pink rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
+			<div
+				class="w-[260px] h-[180px] bg-pink rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all">
 				rekonstrukcija
 			</div>
-		</a>
+		</a> -->
 	</div>
 </div>
