--- a/modules/members-panel.module/module.html
+++ b/modules/members-panel.module/module.html
@@ -1,14 +1,16 @@
 <div class="flex justify-center">
 	<div class="max-w-[1200px] grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 md:gap-10">
 		{% for item in module.members_group %}
-			<div class="flex flex-col items-center">
-				<img src="{{item.member_image.src}}" class="max-w-[300px]">
-				<div class="flex gap-0.5 mt-[25px]">
-					<p class="text-xl font-light">{{ item.first_name }}</p>
-					<p class="text-xl font-bold">{{ item.last_name }}</p>
-				</div>
-				<p class="font-light text-2xs">{{ item.member_position }}</p>
+		<div class="flex flex-col items-center">
+			<div class="w-[300px] h-[300px]">
+				<img src="{{item.member_image.src}}" class="object-cover object-center w-full h-full">
 			</div>
+			<div class="flex gap-0.5 mt-[25px]">
+				<p class="text-xl font-light">{{ item.first_name }}</p>
+				<p class="text-xl font-bold">{{ item.last_name }}</p>
+			</div>
+			<p class="font-light text-2xs">{{ item.member_position }}</p>
+		</div>
 		{% endfor %}
 	</div>
 </div>
