--- a/modules/swiper-gallery.module/module.html
+++ b/modules/swiper-gallery.module/module.html
@@ -2,69 +2,76 @@
 {{ 'bg-pink/[.08]' if module.variant == 'false' }}
 ">
   {% if module.variant == 'true' %}
-    <div class="absolute top-0 left-0 bg-blue w-1/12 h-[10px]"></div>
-    <div class="absolute top-0 left-0 bg-blue w-[10px] h-1/4"></div>
-    <div class="absolute bottom-0 left-0 bg-pink w-[10px] h-1/4"></div>
-    <div class="absolute bottom-0 left-0 bg-pink w-1/3 h-[10px]"></div>
-    <img src="{{ get_asset_url("../../images/icons/large-dots.svg") }}" class="absolute right-0 top-[-75px] hidden lg:block max-w-[150px]">
+  <div class="absolute top-0 left-0 bg-blue w-1/12 h-[10px]"></div>
+  <div class="absolute top-0 left-0 bg-blue w-[10px] h-1/4"></div>
+  <div class="absolute bottom-0 left-0 bg-pink w-[10px] h-1/4"></div>
+  <div class="absolute bottom-0 left-0 bg-pink w-1/3 h-[10px]"></div>
+  <img src="{{ get_asset_url(" ../../images/icons/large-dots.svg") }}"
+    class="absolute right-0 top-[-75px] hidden lg:block max-w-[150px]">
   {% endif %}
   {% if module.variant == 'false' %}
-    <img src="{{ get_asset_url("../../images/icons/large-dots.svg") }}" class="absolute right-0 top-[-75px] hidden lg:block max-w-[150px]">
-    <img src="{{ get_asset_url("../../images/icons/small-dots.svg") }}" class="absolute left-0 bottom-[-85px] hidden lg:block">
+  <img src="{{ get_asset_url(" ../../images/icons/large-dots.svg") }}"
+    class="absolute right-0 top-[-75px] hidden lg:block max-w-[150px]">
+  <img src="{{ get_asset_url(" ../../images/icons/small-dots.svg") }}"
+    class="absolute left-0 bottom-[-85px] hidden lg:block">
   {% endif %}
-	<p class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1">{{ module.title }}</p>
+  <p class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1">{{ module.title }}</p>
   <div class="sponsorship-images swiper max-w-[1000px]" data-sponsorship-module-name="{{ name }}">
-		<div class="flex items-center swiper-wrapper">
-			{% for item in module.image_group %}
-				<img class="max-w-[200px] sm:max-w-15 swiper-slide" src="{{ item.image_field.src }}" width="200px" loading="lazy" alt="{{ item.title }}">
-			{% endfor %}
-		</div>
+    <div class="flex items-center swiper-wrapper">
+      {% for item in module.image_group %}
+      <a href="{{item.image_link.url.href}}" class="swiper-slide max-w-[200px] sm:max-w-15">
+        <img class="max-w-[200px] sm:max-w-15" src="{{ item.image_field.src }}" width="200px" loading="lazy"
+          alt="{{ item.title }}">
+      </a>
+      {% endfor %}
+    </div>
   </div>
   <div class="sponsorship-images-pagination-container swiper-pagination relative mt-4 bottom-0"></div>
 
   {% if module.show_button == true %}
-    <div class="flex justify-center w-full">
-      <a href="{{ module.button.link_field.url.href }}" class="button w-fit mt-5 uppercase">{{module.button.link_label}}</a>
-    </div>
+  <div class="flex justify-center w-full">
+    <a href="{{ module.button.link_field.url.href }}"
+      class="button w-fit mt-5 uppercase">{{module.button.link_label}}</a>
+  </div>
   {% endif %}
 </div>
 
 {% require_js %}
 <script>
-let sponsorshipMainContainer = document.getElementsByClassName("sponsorship-images");
-let sponsorshipPaginationContainer = document.getElementsByClassName("sponsorship-images-pagination-container");
-let sponsorshipSwipers = [];
-for(let i = 0; i < sponsorshipMainContainer.length; i++){
-  let currentModuleId = sponsorshipMainContainer[i].dataset.sponsorshipModuleName;
-  sponsorshipMainContainer[i].className += " sponsorship-images_" + currentModuleId;
-  sponsorshipPaginationContainer[i].className += " sponsorship-images-pagination-container_" + currentModuleId;
+  let sponsorshipMainContainer = document.getElementsByClassName("sponsorship-images");
+  let sponsorshipPaginationContainer = document.getElementsByClassName("sponsorship-images-pagination-container");
+  let sponsorshipSwipers = [];
+  for (let i = 0; i < sponsorshipMainContainer.length; i++) {
+    let currentModuleId = sponsorshipMainContainer[i].dataset.sponsorshipModuleName;
+    sponsorshipMainContainer[i].className += " sponsorship-images_" + currentModuleId;
+    sponsorshipPaginationContainer[i].className += " sponsorship-images-pagination-container_" + currentModuleId;
 
-  sponsorshipSwipers[i] = new Swiper(".sponsorship-images_" + currentModuleId, {
-    slidesPerView: "auto",
-    freeMode: {
-      enabled: true,
-      sticky: true,
-    },
-    mousewheel: {
-      forceToAxis: true,
-    },
-    pagination: {
-    	el: ".sponsorship-images-pagination-container_" + currentModuleId,
-      clickable: true,
-    },
-    slidesOffsetAfter: 80,
-    breakpoints: {
-      100: {
-        spaceBetween: 60,
-        slidesOffsetBefore: 40,
-        slidesOffsetAfter: 40,
+    sponsorshipSwipers[i] = new Swiper(".sponsorship-images_" + currentModuleId, {
+      slidesPerView: "auto",
+      freeMode: {
+        enabled: true,
+        sticky: true,
       },
-      1139: {
-        spaceBetween: 100,
+      mousewheel: {
+        forceToAxis: true,
       },
-    }
-  });
-}
+      pagination: {
+        el: ".sponsorship-images-pagination-container_" + currentModuleId,
+        clickable: true,
+      },
+      slidesOffsetAfter: 80,
+      breakpoints: {
+        100: {
+          spaceBetween: 60,
+          slidesOffsetBefore: 40,
+          slidesOffsetAfter: 40,
+        },
+        1139: {
+          spaceBetween: 100,
+        },
+      }
+    });
+  }
 
 </script>
 {% end_require_js %}
