--- a/modules/image-card.module/module.html
+++ b/modules/image-card.module/module.html
@@ -2,28 +2,31 @@
 
 
   {% if module.show_decorators == true %}
-		<div class="absolute top-0 right-0 bg-blue w-1/5 h-[10px]"></div>
-	  <div class="absolute top-0 right-0 bg-blue w-[10px] max-h-[300px] h-full"></div>
-	  <div class="absolute bottom-0 left-0 bg-pink w-[10px] max-h-[300px] h-full"></div>
-	  <div class="absolute bottom-0 left-0 bg-pink w-1/12 h-[10px]"></div>
-	{% endif %}
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-5 xl:gap-10">
+  <div class="absolute top-0 right-0 bg-blue w-1/5 h-[10px]"></div>
+  <div class="absolute top-0 right-0 bg-blue w-[10px] max-h-[300px] h-full"></div>
+  <div class="absolute bottom-0 left-0 bg-pink w-[10px] max-h-[300px] h-full"></div>
+  <div class="absolute bottom-0 left-0 bg-pink w-1/12 h-[10px]"></div>
+  {% endif %}
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 xl:gap-10">
 
-  {% for card in module.cards %}
-  <div class="flex flex-col bg-white text-grey4 cursor-pointer group drop-shadow-xs" href="{{ card.link_field.url.href }}"
-    {{ 'target="_blank"' if open_in_new_tab == true }}>
-    <div class="relative w-full h-full max-h-[300px]">
-      <div class="bg-gradient-to-b from-transparent to-black/[.38] absolute w-full h-full origin-center z-10"></div>
-      <img src="{{ card.image_field.src }}" alt="{{ card.image_field.alt }}"
-        class="object-cover object-center min-h-full min-w-full max-h-full max-w-full">
-        <p class="absolute bottom-2 left-2 sm:bottom-4 sm:left-4 lg:bottom-3 lg:left-3 text-2xl sm:text-5xl text-white z-20">{{ card.title }}</p>
+    {% for card in module.cards %}
+    <div class="flex flex-col bg-white text-grey4 cursor-pointer group drop-shadow-xs">
+      <div class="relative w-full h-full max-h-[300px]">
+        <div class="bg-gradient-to-b from-transparent to-black/[.38] absolute w-full h-full origin-center z-10"></div>
+        <img src="{{ card.image_field.src }}" alt="{{ card.image_field.alt }}"
+          class="object-cover object-center min-h-full min-w-full max-h-full max-w-full">
+        <p
+          class="absolute bottom-2 left-2 sm:bottom-4 sm:left-4 lg:bottom-3 lg:left-3 text-2xl sm:text-5xl text-white z-20">
+          {{ card.title }}</p>
+      </div>
+      <div class="w-full h-[5px] bg-gradient-to-r from-blue to-pink"></div>
+      <div class="p-2 sm:p-4 lg:p-3 bg-white h-full flex flex-col justify-between">
+        <p class="text-xs sm:text-sm">{{ card.description }}</p>
+        <a href="{{ card.link_field.url.href }}" href="{{ card.link_field.url.href }}" {{ 'target="_blank"' if
+          card.link_field.open_in_new_tab==true }}
+          class="block border-2 border-pink px-3 py-1 w-fit mt-2 hover:bg-pinkDark hover:text-white hover:border-pinkDark transition-all">{{card.link_label}}</a>
+      </div>
     </div>
-    <div class="w-full h-[5px] bg-gradient-to-r from-blue to-pink"></div>
-    <div class="p-2 sm:p-4 lg:p-3 bg-white">
-      <p class="text-xs sm:text-sm">{{ card.description }}</p>
-      <a href="{{ card.link_field.url.href }}" class="block border-2 border-pink px-3 py-1 w-fit mt-2 hover:bg-pinkDark hover:text-white hover:border-pinkDark transition-all">{{card.link_label}}</a>
-    </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div>
 </div>
