--- a/modules/swiper-gallery.module/module.html
+++ b/modules/swiper-gallery.module/module.html
@@ -2,18 +2,20 @@
 {{ 'bg-pink/[.08]' if module.variant == 'false' }}
 ">
   {% if module.variant == 'true' %}
-  <div class="absolute top-0 left-0 bg-blue w-1/12 h-[10px]"></div>
-  <div class="absolute top-0 left-0 bg-blue w-[10px] h-1/4"></div>
-  <div class="absolute bottom-0 left-0 bg-pink w-[10px] h-1/4"></div>
-  <div class="absolute bottom-0 left-0 bg-pink w-1/3 h-[10px]"></div>
-  <img src="{{ get_asset_url(" ../../images/icons/large-dots.svg") }}"
-    class="absolute right-0 top-[-75px] hidden lg:block max-w-[150px]">
+  <!-- <div class="absolute top-0 left-0 bg-blue w-1/12 h-[10px]"></div> -->
+  <!-- <div class="absolute top-0 left-0 bg-blue w-[10px] h-1/4"></div> -->
+  <!-- <div class="absolute bottom-0 left-0 bg-pink w-[10px] h-1/4"></div> -->
+  <!-- <div class="absolute bottom-0 left-0 bg-pink w-1/3 h-[10px]"></div> -->
+  <img src='{{ get_asset_url("../../images/icons/large-dots.svg") }}'
+    class="absolute right-0 top-[-75px] block max-w-[170px]">
+  <img src='{{ get_asset_url("../../images/icons/small-dots.svg") }}'
+    class="absolute left-[-65px] bottom-[-85px] block">
   {% endif %}
   {% if module.variant == 'false' %}
-  <img src="{{ get_asset_url(' ../../images/icons/large-dots.svg') }}"
-    class="absolute right-0 top-[-75px] hidden lg:block">
-  <img src="{{ get_asset_url('../../images/icons/small-dots.svg') }}"
-    class="absolute left-[-65px] bottom-[-85px] hidden lg:block">
+  <img src='{{ get_asset_url("../../images/icons/large-dots.svg") }}'
+    class="absolute right-0 top-[-75px] block max-w-[170px]">
+  <img src='{{ get_asset_url("../../images/icons/small-dots.svg") }}'
+    class="absolute left-[-65px] bottom-[-85px] block">
   {% endif %}
   <p class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1">{{ module.title }}</p>
   <div class="sponsorship-images swiper max-w-[1000px]" data-sponsorship-module-name="{{ name }}">
