--- a/sections/banner.html
+++ b/sections/banner.html
@@ -20,7 +20,7 @@
 			{% dnd_module
 				vertical_alignment="MIDDLE",
         path='@hubspot/rich_text',
-        html={{ context.content || '<p class=" text-5xl lg:text-[80px] font-bold leading-none text-center md:text-left mb-2 md:mb-0"><span class="font-normal">A&T</span> SISTEM</p>' }}
+        html={{ context.content || '<p class="text-5xl lg:text-[80px] font-bold leading-none text-center md:text-left mb-2 md:mb-0"><span class="font-normal">A&T</span> SISTEM</p>' }}
       %}
       {% end_dnd_module %}
 		{% end_dnd_row %}
@@ -30,7 +30,7 @@
 			{% dnd_module
 				vertical_alignment="MIDDLE",
         path='@hubspot/rich_text',
-        html={{ context.content || '<p class="font-normal text-lg lg:text-3xl text-center md:text-left">It is a long established fact that a reader will bedistracted by the readable content of a page  when looking at its layout. </p>' }}
+        html={{ context.content || '<p class="font-normal text-lg lg:text-3xl text-center !leading-snug md:text-left">It is a long established fact that a reader will bedistracted by the readable content of a page  when looking at its layout. </p>' }}
       %}
       {% end_dnd_module %}
 		{% end_dnd_row %}
