--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -14,8 +14,7 @@
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
 		{% for card in module.cards %}
 		<a href="{{ card.card_link.url.href }}" class="group">
-			<div
-				class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex justify-center items-center group-hover:scale-110 transition-all"
+			<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex justify-center items-center transition-all"
 				style="background-color: {{card.card_color.color}};">
 				{{ card.card_title }}
 			</div>
