--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -1,14 +1,14 @@
-<div class="
-grid grid-cols-1 lg:grid-cols-2 gap-3 lg:gap-[120px] xl:gap-[160px]
-">
+<div
+  class="flex flex-wrap {{ 'flex-row-reverse' if module.reverse_content_direction == true}} gap-3 lg:gap-[120px] xl:gap-[160px]">
 
-  {% if module.reverse_content_direction == true %}
-  <div class="flex w-full items-left m-auto lg:items-center flex-1">
+  <img src="{{ module.image_field.src }}" loading="lazy" alt="{{ module.image.alt }}"
+    class="object-cover object-center max-h-[420px] w-full lg:w-1/2" />
+  <div class="flex w-full lg:w-1/2 items-left m-auto lg:items-center flex-1">
     <div class="flex flex-col">
       <a href="{{ module.link.url.href }}" {% if module.link.open_in_new_tab==true %} target="_blank" {% endif %}>
         <p class="text-xl lg:text-4xl leading-tight font-bold mb-2 lg:mb-4">{{ module.title }}</p>
       </a>
-      <p class="text-light mb-2 lg:mb-4">{{ module.description }}</p>
+      <p class="text-light mb-2 lg:mb-4 text-base leading-4">{{ module.description }}</p>
       {% if module.link.url.href != '' %}
       <a href="{{ module.link.url.href }}" {% if module.link.open_in_new_tab==true %} target="_blank" {% endif %}
         class="button w-fit uppercase">
@@ -17,24 +17,5 @@ grid grid-cols-1 lg:grid-cols-2 gap-3 lg:gap-[120px] xl:gap-[160px]
       {% endif %}
     </div>
   </div>
-  <img src="{{ module.image_field.src }}" loading="lazy" alt="{{ module.image.alt }}"
-    class="object-cover object-center max-w-[750px] max-h-[350px] w-full" width="750px" />
-  {% else %}
-  <img src="{{ module.image_field.src }}" loading="lazy" alt="{{ module.image.alt }}"
-    class="object-cover object-center max-w-[750px] max-h-[350px] w-full" />
-  <div class="flex w-full items-left m-auto lg:items-center flex-1">
-    <div class="flex flex-col">
-      <a href="{{ module.link.url.href }}" {% if module.link.open_in_new_tab==true %} target="_blank" {% endif %}>
-        <p class="text-xl lg:text-4xl leading-tight font-bold mb-2 lg:mb-4">{{ module.title }}</p>
-      </a>
-      <p class="text-light mb-2 lg:mb-4">{{ module.description }}</p>
-      {% if module.link.url.href != '' %}
-      <a href="{{ module.link.url.href }}" {% if module.link.open_in_new_tab==true %} target="_blank" {% endif %}
-        class="button w-fit uppercase">
-        {{ module.link_label }}
-      </a>
-      {% endif %}
-    </div>
-  </div>
-  {% endif %}
+
 </div>
