--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
 	<div class="border-l-[10px] border-l-pink pl-5 max-w-[550px] h-min">
 		<p class="font-bold text-5xl">{{ module.title }}</p>
-		<p class="font-light text-sm my-1">{{ module.description }}</p>
+		<p class="font-light text-sm my-2 leading-normal">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
 		<a href="{{ module.link_field.url.href }}" class="flex gap-1 items-center">
 			{{ module.link_label }}
@@ -13,12 +13,10 @@
 	</div>
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
 		{% for card in module.cards %}
-		<a href="{{ card.card_link.url.href }}" class="group">
 			<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex justify-center items-center transition-all"
 				style="background-color: {{card.card_color.color}};">
 				{{ card.card_title }}
 			</div>
-		</a>
 		{% endfor %}
 
 	</div>
