--- a/sections/cover-promo.html
+++ b/sections/cover-promo.html
@@ -20,14 +20,14 @@
     {% dnd_row offset=0, width=12%}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.content || '<p class="text-3xl md:text-5xl font-bold leading-none mb-4"><span class="font-light">Our</span> Storageroom</p>' }}
+        html={{ context.content || '<p class="text-3xl md:text-5xl font-bold leading-none mb-4"><span class="font-light">Naš</span> lager</p>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
     {% dnd_row offset=0, width=12%}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.content || '<p class="text-lg md:text-xl font-normal max-w-[750px]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable.</p>' }}
+        html={{ context.content || '<p class="text-lg md:text-xl font-normal max-w-[750px]">Dobro opremljen lager je jedan od naših imperativa. U jeku sezone proizvođači često daju dugačke rokove isporuke. S druge strane dinamika gradnje mora uvek biti blagovremeno ispraćena i oprema obezbeđena. Zato naša logistika vodi računa da na zalihama uvek imamo svu neophodnu opremu i rezervne delove.</p>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
